<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/content_about"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_startor"
        android:textColor="@color/colorItemText"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/about_startor_detail"/>

    <TextView
        android:id="@+id/about_boss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_common_sina_24dp"
        android:gravity="center_vertical"
        android:text="@string/boss"/>

    <TextView
        android:id="@+id/about_girl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_common_sina_24dp"
        android:gravity="center_vertical"
        android:text="@string/girl"/>

    <TextView
        android:id="@+id/about_boy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_common_sina_24dp"
        android:gravity="center_vertical"
        android:text="@string/boy"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/about_developer"
        android:textColor="@color/colorItemText"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/about_content_text_my_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/about_developer_detail"/>

    <TextView
        android:id="@+id/about_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_common_github_24dp"
        android:gravity="center_vertical"
        android:paddingTop="8dp"
        android:text="@string/my_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/about_library"
        android:textColor="@color/colorItemText"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/about_rxjava"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/about_rxandroid"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/about_volley"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/about_gson"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/about_glide"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/about_jiecao"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/about_downloader"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/about_rollpager"/>
    
    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_me"
        android:layout_marginTop="32dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerInside"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="32dp"
        android:layout_gravity="center_horizontal"
        android:drawableEnd="@drawable/ic_item_like_16dp"
        android:drawablePadding="4dp"
        android:text="@string/about_crafted"/>
</LinearLayout>
