<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <TextView
        android:id="@+id/share_wx"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:drawablePadding="8dp"
        android:drawableTop="@drawable/ic_share_wx_64dp"
        android:gravity="center"
        android:text="@string/share_wx"
        android:textColor="@color/colorItemText"/>

    <TextView
        android:id="@+id/share_time_line"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:drawablePadding="8dp"
        android:drawableTop="@drawable/ic_share_friends_64dp"
        android:gravity="center"
        android:text="@string/share_time_line"
        android:textColor="@color/colorItemText"/>

    <TextView
        android:id="@+id/share_other"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:drawablePadding="8dp"
        android:drawableTop="@drawable/ic_share_other_64dp"
        android:gravity="center"
        android:text="@string/share_other"
        android:textColor="@color/colorItemText"/>
</LinearLayout>